SFS_RA - Dispatch Policy Components/force-app/main/default/objects/SFS_RA_Agent_Manager__c/SFS_RA_Agent_Manager__c.object-meta.xml
<CustomObject>
    <description>Master Object that controls behaviour of SFS reusable assets.</description>
    <label>Agent Manager</label>
    <nameField>
        <displayFormat>AM-{00000}</displayFormat>
        <label>Agent Manager</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>