SFS_RA - Dispatch Policy Components/force-app/main/default/objects/SFS_RA_Agent_Manager__c/fields/SFS_RA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>