SFS_RA - Dispatch Policy Components/force-app/main/default/objects/SFS_RA_Agent_Manager__c/fields/SFS_RA_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Agent Managers</relationshipLabel>
    <relationshipName>Agent_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>