SFS_RA - Dispatch Policy Components/force-app/main/default/objects/SFS_RA_Agent_Manager__c/fields/SFS_RA_Type__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller Record</fullName>
            </value>
            <value>
                <fullName>Territory Decomposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>